src/objects/SBQQ__ProductAttributeSet__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_Config_Version__c</fullName>
        <label>CPQ Config Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Old_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is_Old_Version__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Id__c</fullName>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AttributeSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Sets</label>
        <referenceTo>SBQQ__AttributeSet__c</referenceTo>
        <relationshipName>Attribute_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfiguredSKU__c</fullName>
        <formula>CASESAFEID(SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configured SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductName__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__ConfiguredSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOptionName__c</fullName>
        <formula>SBQQ__ProductOption__r.SBQQ__OptionalSKU__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Option Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Option</label>
        <referenceTo>SBQQ__ProductOption__c</referenceTo>
        <relationshipName>Product_Option</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Attribute Set</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Product Attribute Set</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>